--- a/tutorials/newton_tutorial.ipynb
+++ b/tutorials/newton_tutorial.ipynb
@@ -5,13 +5,11 @@
    "metadata": {},
    "source": [
     "# Newton's Method Tutorial\n",
-    "\n",
     "In this tutorial, we will explore **Newton's Method** for solving non-linear equations. We'll demonstrate how to use the method with a variety of functions. Newton's Method is an iterative technique for finding roots of real-valued functions. It starts with an initial guess and refines it through iterations until convergence.\n",
     "\n",
     "---\n",
     "\n",
     "### Importing Necessary Libraries\n",
-    "\n",
     "We begin by importing the necessary functions. We'll use `newton_functions` from the `newton` module for our calculations.\n",
     "\n",
     "```python\n",
@@ -25,7 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fe9c55a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,10 +37,9 @@
     "---\n",
     "\n",
     "### Example 1: Solving a Simple Linear Equation\n",
-    "\n",
     "We will start with a simple linear function:\n",
     "\n",
-    "$$\nf(x) = x - 4\n$$\n",
+    "$$ f(x) = x - 4 $$\n",
     "\n",
     "The root of this equation is $x = 4$, but we will use Newton's Method to find it starting with an initial guess of $x_0 = 3$.\n",
     "\n",
@@ -59,14 +55,12 @@
     "x = nf.newton_method(f, nf.derivative_of_f, x0, tolerance=1e-6, max_iter=100)\n",
     "print('x =', x)\n",
     "```\n",
-    "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7d6ff504",
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +94,9 @@
     "---\n",
     "\n",
     "### Example 2: Solving a Quadratic Equation\n",
-    "\n",
     "Now, let's solve a quadratic equation:\n",
     "\n",
-    "$$\nf(x) = x^2 - 100\n$$\n",
+    "$$ f(x) = x^2 - 100 $$\n",
     "\n",
     "The root of this equation is $x = 10$ or $x = -10$. We start with an initial guess of $x_0 = 5$.\n",
     "\n",
@@ -119,14 +112,12 @@
     "x = nf.newton_method(f, nf.derivative_of_f, x0, tolerance=1e-6, max_iter=100)\n",
     "print('x =', x)\n",
     "```\n",
-    "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "adf38087",
    "metadata": {},
    "outputs": [
     {
@@ -160,10 +151,9 @@
     "---\n",
     "\n",
     "### Example 3: Solving a Trigonometric Equation\n",
-    "\n",
     "Next, we'll solve the equation:\n",
     "\n",
-    "$$\nf(x) = \sin(x)\n$$\n",
+    "$$ f(x) = \sin(x) $$\n",
     "\n",
     "We start with an initial guess of $x_0 = 1$, and the root of this equation is $x = 0$.\n",
     "\n",
@@ -179,14 +169,12 @@
     "x = nf.newton_method(f, nf.derivative_of_f, x0, tolerance=1e-6, max_iter=100)\n",
     "print('x =', x)\n",
     "```\n",
-    "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5765e80b",
    "metadata": {},
    "outputs": [
     {
@@ -220,10 +208,9 @@
     "---\n",
     "\n",
     "### Example 4: Solving a Nonlinear Buckling Equation\n",
-    "\n",
     "Now let's tackle a more complex equation, often used in materials science for **nonlinear buckling**:\n",
     "\n",
-    "$$\nf(e) = \\sigma - E \\cdot (1 + \\alpha \\cdot e) \\cdot e\n$$\n",
+    "$$ f(e) = \\sigma - E \\cdot (1 + \\alpha \\cdot e) \\cdot e $$\n",
     "\n",
     "Where:\n",
     "- $\\sigma = 50000$ (stress),\n",
@@ -250,20 +237,18 @@
     "e = nf.newton_method(f, nf.derivative_of_f, e0, tolerance=1e-6, max_iter=100)\n",
     "print('e =', e)\n",
     "```\n",
-    "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d378b810",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "e = 4.508180132028645e-10"
+       "e = 0.0"
       ]
      },
      "execution_count": 5,
@@ -296,7 +281,6 @@
     "---\n",
     "\n",
     "### Example 5: Solving a Nonlinear Pressure-Volume Relationship\n",
-    "\n",
     "Finally, let's solve a **nonlinear pressure-volume relationship** in thermodynamics. The equation is:\n",
     "\n",
     "$$\nf(v) = C - P \\cdot v^n\n$$\n",
@@ -326,14 +310,12 @@
     "v = nf.newton_method(f, nf.derivative_of_f, v0, tolerance=1e-6, max_iter=100)\n",
     "print('v =', v)\n",
     "```\n",
-    "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "65a22e0a",
    "metadata": {},
    "outputs": [
     {
