--- a/tutorials/newtons_method_tutorial.ipynb
+++ b/tutorials/newtons_method_tutorial.ipynb
@@ -43,7 +43,7 @@
     "x0 = 3\n",
     "\n",
     "# Apply Newton's Method\n",
-    "x = nf.newton_method(f, derivative_of_f, x0, tolerance=1e-6, max_iter=100)\n",
+    "x = nf.newton_method(f, nf.derivative_of_f, x0, tolerance=1e-6, max_iter=100)\n",
     "print(\"x =\", x)\n",
     "```\n",
     "    "
@@ -68,7 +68,7 @@
     "x0 = 5\n",
     "\n",
     "# Apply Newton's Method\n",
-    "x = nf.newton_method(f, derivative_of_f, x0, tolerance=1e-6, max_iter=100)\n",
+    "x = nf.newton_method(f, nf.derivative_of_f, x0, tolerance=1e-6, max_iter=100)\n",
     "print(\"x =\", x)\n",
     "```\n",
     "    "
@@ -93,7 +93,7 @@
     "x0 = 1\n",
     "\n",
     "# Apply Newton's Method\n",
-    "x = nf.newton_method(f, derivative_of_f, x0, tolerance=1e-6, max_iter=100)\n",
+    "x = nf.newton_method(f, nf.derivative_of_f, x0, tolerance=1e-6, max_iter=100)\n",
     "print(\"x =\", x)\n",
     "```\n",
     "    "
@@ -127,7 +127,7 @@
     "e0 = 0\n",
     "\n",
     "# Apply Newton's Method\n",
-    "e = nf.newton_method(f, derivative_of_f, e0, tolerance=1e-6, max_iter=100)\n",
+    "e = nf.newton_method(f, nf.derivative_of_f, e0, tolerance=1e-6, max_iter=100)\n",
     "print(\"e =\", e)\n",
     "```\n",
     "    "
@@ -161,7 +161,7 @@
     "v0 = 1\n",
     "\n",
     "# Apply Newton's Method\n",
-    "v = nf.newton_method(f, derivative_of_f, v0, tolerance=1e-6, max_iter=100)\n",
+    "v = nf.newton_method(f, nf.derivative_of_f, v0, tolerance=1e-6, max_iter=100)\n",
     "print(\"v =\", v)\n",
     "```\n",
     "    "
