--- a/tutorials/newtons_method_tutorial.ipynb
+++ b/tutorials/newtons_method_tutorial.ipynb
@@ -19,6 +19,9 @@
     "# Import necessary libraries\n",
     "from newton import newton_functions as nf\n",
     "import numpy as np\n"
+    "import sys \n"
+    "sys.path.append('../src') \n"
+
    ]
   },
   {
