--- a/tutorials/elastoplastic_tutorial.ipynb
+++ b/tutorials/elastoplastic_tutorial.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from test_MaterialModel import IsotropicHardeningModel, KinematicHardeningModel\n",
+    "from src.elastoplastic.elastoplastic_functions import IsotropicHardeningModel, KinematicHardeningModel\n",
     "\n",
     "def run_isotropic_example(sig_0, ep_0, E, H, Y_0, strain_increments, n):\n",
     "    model = IsotropicHardeningModel(sig_0, ep_0, E, H, Y_0, n)\n",
