--- a/tutorials/elastoplastic_tutorial.ipynb
+++ b/tutorials/elastoplastic_tutorial.ipynb
@@ -11,7 +11,10 @@
     "import os\n",
     "\n",
     "# Add the project root to the Python path\n",
-    "sys.path.append(os.path.abspath(os.path.join('..', '..')))\n"
+    "sys.path.append(os.path.abspath(os.path.join('..', '..')))\n",
+    "\n",
+    "import numpy as np\n",
+    "import elastoplastic.elastoplastic_functions as ef\n"
    ]
   },
   {
@@ -39,11 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from src.elastoplastic.elastoplastic_functions import IsotropicHardeningModel\n",
-    "\n",
     "def run_isotropic_example(sig_0, ep_0, E, H, Y_0, strain_increments, n):\n",
-    "    model = IsotropicHardeningModel(sig_0, ep_0, E, H, Y_0, n)\n",
+    "    model = ef.IsotropicHardeningModel(sig_0, ep_0, E, H, Y_0, n)\n",
     "    sig, ep, Y = model.compute_stress(strain_increments)\n",
     "    return sig, ep, Y\n",
     "\n",
@@ -115,7 +115,7 @@
    "outputs": [],
    "source": [
     "strain_increments = [0.001] * 50  # Small strain increments\n",
-    "My_mat = IsotropicHardeningModel(0, 0, 200e3, 50e3, 285, 50)\n",
+    "My_mat = ef.IsotropicHardeningModel(0, 0, 200e3, 50e3, 285, 50)\n",
     "sig, ep, Y = My_mat.compute_stress(strain_increments)\n",
     "sig[-1], ep[-1], Y[-1]"
    ]
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "strain_increments = [0.003, -0.003] * 25  # Cyclic strain increments\n",
-    "My_mat = KinematicHardeningModel(0, 0, 0, 69000, 7000, 276, 50)\n",
+    "My_mat = ef.KinematicHardeningModel(0, 0, 0, 69000, 7000, 276, 50)\n",
     "sig, ep, alpha = My_mat.compute_stress(strain_increments)\n",
     "sig[-1], ep[-1], alpha[-1]"
    ]
