--- a/tutorials/elastoplastic_tutorial.ipynb
+++ b/tutorials/elastoplastic_tutorial.ipynb
@@ -14,7 +14,7 @@
     "sys.path.append(os.path.abspath(os.path.join('..', '..')))\n",
     "\n",
     "import numpy as np\n",
-    "import elastoplastic.elastoplastic_functions as ef\n"
+    "from elastoplastic import elastoplastic_functions as ef\n"
    ]
   },
   {
