--- a/tutorials/elastoplastic_tutorial.ipynb
+++ b/tutorials/elastoplastic_tutorial.ipynb
@@ -11,7 +11,7 @@
     "import os\n",
     "\n",
     "# Add the project root to the Python path\n",
-    "sys.path.append(os.path.abspath(os.path.join('..', '..')))\n",
+    "sys.path.append(os.path.abspath(os.path.join('..')))\n",
     "\n",
     "import numpy as np\n",
     "from src.elastoplastic import elastoplastic_functions as ef\n"
