--- a/tutorials/elastoplastic_tutorial.ipynb
+++ b/tutorials/elastoplastic_tutorial.ipynb
@@ -44,7 +44,14 @@
    "source": [
     "def run_isotropic_example(sig_0, ep_0, E, H, Y_0, strain_increments, n):\n",
     "    model = ef.IsotropicHardeningModel(sig_0, ep_0, E, H, Y_0, n)\n",
-    "    sig, ep, Y = model.compute_stress(strain_increments)\n",
+    "    sig = []\n",
+    "    ep = []\n",
+    "    Y = []\n",
+    "    for de in strain_increments:\n",
+    "        sig_i, ep_i, Y_i = model.compute_stress([de])  # Pass one increment at a time\n",
+    "        sig.append(sig_i)\n",
+    "        ep.append(ep_i)\n",
+    "        Y.append(Y_i)\n",
     "    return sig, ep, Y\n",
     "\n",
     "strain_increments = [0.001] * 50  # Small strain increments\n",
