--- a/tutorials/elastoplastic_tutorial.ipynb
+++ b/tutorials/elastoplastic_tutorial.ipynb
@@ -18,6 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add the project root to the Python path\n",
+    "sys.path.append(os.path.abspath(os.path.join('..')))\n",
+    "\n",
     "import numpy as np\n",
     "from src.elastoplastic import elastoplastic_functions as ef\n",
     "\n",
@@ -49,59 +55,40 @@
     "        ep_list.append(ep)\n",
     "        alpha_list.append(alpha)\n",
     "        \n",
-    "    return np.array(sig_list), np.array(ep_list), np.array(alpha_list)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Running Isotropic and Kinematic Hardening Models\n",
+    "    return np.array(sig_list), np.array(ep_list), np.array(alpha_list)\n",
     "\n",
-    "Now we will run examples of both isotropic and kinematic hardening models with different strain increments."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if __name__ == \"__main__\":\n",
-    "    print(\"\\nRunning Isotropic and Kinematic Hardening Model Tutorials...\\n\")\n",
-    "    \n",
-    "    # Define strain increments\n",
-    "    strain_increments = np.linspace(0, 0.1, 10)  # Example: 10 increments from 0 to 0.1\n",
-    "    \n",
-    "    # Example 1: Isotropic Hardening with multiple strain increments\n",
-    "    print(\"Example 1: Isotropic Hardening with multiple strain increments\")\n",
-    "    sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=250, strain_increments=strain_increments, n=50)\n",
-    "    print(\"Final Stress:\", sig[-1], \"Final Plastic Strain:\", ep[-1])\n",
-    "    \n",
-    "    # Example 2: Isotropic Hardening with larger strain increments\n",
-    "    print(\"\\nExample 2: Isotropic Hardening with larger strain increments\")\n",
-    "    strain_increments_large = np.linspace(0, 0.2, 5)  # Larger increments from 0 to 0.2\n",
-    "    sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=20e3, Y_0=300, strain_increments=strain_increments_large, n=50)\n",
-    "    print(\"Final Stress:\", sig[-1], \"Final Plastic Strain:\", ep[-1])\n",
-    "    \n",
-    "    # Example 3: Kinematic Hardening with multiple strain increments\n",
-    "    print(\"\\nExample 3: Kinematic Hardening with multiple strain increments\")\n",
-    "    sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=15e3, Y_0=275, strain_increments=strain_increments, n=50)\n",
-    "    print(\"Final Stress:\", sig[-1], \"Final Plastic Strain:\", ep[-1])\n",
-    "    \n",
-    "    # Example 4: Kinematic Hardening with larger strain increments\n",
-    "    print(\"\\nExample 4: Kinematic Hardening with larger strain increments\")\n",
-    "    sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=210e3, H=12e3, Y_0=280, strain_increments=strain_increments_large, n=50)\n",
-    "    print(\"Final Stress:\", sig[-1], \"Final Plastic Strain:\", ep[-1])\n",
-    "    \n",
-    "    # Example 5: Comparison of Isotropic and Kinematic Hardening under same conditions\n",
-    "    print(\"\\nExample 5: Comparing Isotropic and Kinematic Hardening with multiple strain increments\")\n",
-    "    sig_iso, ep_iso, _ = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
-    "    sig_kin, ep_kin, _ = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
-    "    print(\"Isotropic - Final Stress:\", sig_iso[-1], \"Final Plastic Strain:\", ep_iso[-1])\n",
-    "    print(\"Kinematic - Final Stress:\", sig_kin[-1], \"Final Plastic Strain:\", ep_kin[-1])\n",
-    "    \n",
-    "    print(\"\\nTutorial Completed!\")"
+    "# Define strain increments\n",
+    "strain_increments = np.linspace(0, 0.1, 10)  # Example: 10 increments from 0 to 0.1\n",
+    "\n",
+    "# Example 1: Isotropic Hardening with multiple strain increments\n",
+    "print('Example 1: Isotropic Hardening with multiple strain increments')\n",
+    "sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=250, strain_increments=strain_increments, n=50)\n",
+    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
+    "\n",
+    "# Example 2: Isotropic Hardening with larger strain increments\n",
+    "print('\\nExample 2: Isotropic Hardening with larger strain increments')\n",
+    "strain_increments_large = np.linspace(0, 0.2, 5)  # Larger increments from 0 to 0.2\n",
+    "sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=20e3, Y_0=300, strain_increments=strain_increments_large, n=50)\n",
+    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
+    "\n",
+    "# Example 3: Kinematic Hardening with multiple strain increments\n",
+    "print('\\nExample 3: Kinematic Hardening with multiple strain increments')\n",
+    "sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=15e3, Y_0=275, strain_increments=strain_increments, n=50)\n",
+    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
+    "\n",
+    "# Example 4: Kinematic Hardening with larger strain increments\n",
+    "print('\\nExample 4: Kinematic Hardening with larger strain increments')\n",
+    "sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=210e3, H=12e3, Y_0=280, strain_increments=strain_increments_large, n=50)\n",
+    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
+    "\n",
+    "# Example 5: Comparison of Isotropic and Kinematic Hardening under same conditions\n",
+    "print('\\nExample 5: Comparing Isotropic and Kinematic Hardening with multiple strain increments')\n",
+    "sig_iso, ep_iso, _ = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
+    "sig_kin, ep_kin, _ = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
+    "print('Isotropic - Final Stress:', sig_iso[-1], 'Final Plastic Strain:', ep_iso[-1])\n",
+    "print('Kinematic - Final Stress:', sig_kin[-1], 'Final Plastic Strain:', ep_kin[-1])\n",
+    "\n",
+    "print('\\nTutorial Completed!')"
    ]
   }
  ],
@@ -120,7 +107,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "version": "3.10.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
