--- a/tutorials/elastoplastic_tutorial.ipynb
+++ b/tutorials/elastoplastic_tutorial.ipynb
@@ -1,115 +1,74 @@
-{
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Isotropic and Kinematic Hardening Models\n",
-    "\n",
-    "This notebook demonstrates the use of isotropic and kinematic hardening models with multiple strain increments. It covers:\n",
-    "- Isotropic Hardening\n",
-    "- Kinematic Hardening\n",
-    "- Comparison of both models\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "# Add the project root to the Python path\n",
-    "sys.path.append(os.path.abspath(os.path.join('..')))\n",
-    "\n",
-    "import numpy as np\n",
-    "from src.elastoplastic import elastoplastic_functions as ef\n",
-    "\n",
-    "def run_isotropic_example(sig_0, ep_0, E, H, Y_0, strain_increments, n):\n",
-    "    \"\"\"Runs an example using the isotropic hardening model with multiple strain increments.\"\"\"\n",
-    "    model = ef.IsotropicHardeningModel(sig_0, ep_0, E, H, Y_0, n)\n",
-    "    sig_list = []\n",
-    "    ep_list = []\n",
-    "    Y_list = []\n",
-    "    \n",
-    "    for de in strain_increments:\n",
-    "        sig, ep, Y = model.compute_stress(de)\n",
-    "        sig_list.append(sig)\n",
-    "        ep_list.append(ep)\n",
-    "        Y_list.append(Y)\n",
-    "        \n",
-    "    return np.array(sig_list), np.array(ep_list), np.array(Y_list)\n",
-    "\n",
-    "def run_kinematic_example(sig_0, ep_0, E, H, Y_0, strain_increments, n):\n",
-    "    \"\"\"Runs an example using the kinematic hardening model with multiple strain increments.\"\"\"\n",
-    "    model = ef.KinematicHardeningModel(sig_0, ep_0, E, H, Y_0, n)\n",
-    "    sig_list = []\n",
-    "    ep_list = []\n",
-    "    alpha_list = []\n",
-    "    \n",
-    "    for de in strain_increments:\n",
-    "        sig, ep, alpha = model.compute_stress(de)\n",
-    "        sig_list.append(sig)\n",
-    "        ep_list.append(ep)\n",
-    "        alpha_list.append(alpha)\n",
-    "        \n",
-    "    return np.array(sig_list), np.array(ep_list), np.array(alpha_list)\n",
-    "\n",
-    "# Define strain increments\n",
-    "strain_increments = np.linspace(0, 0.1, 10)  # Example: 10 increments from 0 to 0.1\n",
-    "\n",
-    "# Example 1: Isotropic Hardening with multiple strain increments\n",
-    "print('Example 1: Isotropic Hardening with multiple strain increments')\n",
-    "sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=250, strain_increments=strain_increments, n=50)\n",
-    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
-    "\n",
-    "# Example 2: Isotropic Hardening with larger strain increments\n",
-    "print('\\nExample 2: Isotropic Hardening with larger strain increments')\n",
-    "strain_increments_large = np.linspace(0, 0.2, 5)  # Larger increments from 0 to 0.2\n",
-    "sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=20e3, Y_0=300, strain_increments=strain_increments_large, n=50)\n",
-    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
-    "\n",
-    "# Example 3: Kinematic Hardening with multiple strain increments\n",
-    "print('\\nExample 3: Kinematic Hardening with multiple strain increments')\n",
-    "sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=15e3, Y_0=275, strain_increments=strain_increments, n=50)\n",
-    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
-    "\n",
-    "# Example 4: Kinematic Hardening with larger strain increments\n",
-    "print('\\nExample 4: Kinematic Hardening with larger strain increments')\n",
-    "sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=210e3, H=12e3, Y_0=280, strain_increments=strain_increments_large, n=50)\n",
-    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
-    "\n",
-    "# Example 5: Comparison of Isotropic and Kinematic Hardening under same conditions\n",
-    "print('\\nExample 5: Comparing Isotropic and Kinematic Hardening with multiple strain increments')\n",
-    "sig_iso, ep_iso, _ = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
-    "sig_kin, ep_kin, _ = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
-    "print('Isotropic - Final Stress:', sig_iso[-1], 'Final Plastic Strain:', ep_iso[-1])\n",
-    "print('Kinematic - Final Stress:', sig_kin[-1], 'Final Plastic Strain:', ep_kin[-1])\n",
-    "\n",
-    "print('\\nTutorial Completed!')"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "version": "3.8.8"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
+# Isotropic and Kinematic Hardening Models
+
+"""
+This script demonstrates the use of isotropic and kinematic hardening models with multiple strain increments. It covers:
+- Isotropic Hardening
+- Kinematic Hardening
+- Comparison of both models
+"""
+
+import numpy as np
+from src.elastoplastic import elastoplastic_functions as ef
+
+def run_isotropic_example(sig_0, ep_0, E, H, Y_0, strain_increments, n):
+    """Runs an example using the isotropic hardening model with multiple strain increments."""
+    model = ef.IsotropicHardeningModel(sig_0, ep_0, E, H, Y_0, n)
+    sig_list = []
+    ep_list = []
+    Y_list = []
+    
+    for de in strain_increments:
+        sig, ep, Y = model.compute_stress(de)
+        sig_list.append(sig)
+        ep_list.append(ep)
+        Y_list.append(Y)
+        
+    return np.array(sig_list), np.array(ep_list), np.array(Y_list)
+
+def run_kinematic_example(sig_0, ep_0, E, H, Y_0, strain_increments, n):
+    """Runs an example using the kinematic hardening model with multiple strain increments."""
+    model = ef.KinematicHardeningModel(sig_0, ep_0, E, H, Y_0, n)
+    sig_list = []
+    ep_list = []
+    alpha_list = []
+    
+    for de in strain_increments:
+        sig, ep, alpha = model.compute_stress(de)
+        sig_list.append(sig)
+        ep_list.append(ep)
+        alpha_list.append(alpha)
+        
+    return np.array(sig_list), np.array(ep_list), np.array(alpha_list)
+
+# Define strain increments
+strain_increments = np.linspace(0, 0.1, 10)  # Example: 10 increments from 0 to 0.1
+
+# Example 1: Isotropic Hardening with multiple strain increments
+print('\n### Example 1: Isotropic Hardening with multiple strain increments')
+sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=250, strain_increments=strain_increments, n=50)
+print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])
+
+# Example 2: Isotropic Hardening with larger strain increments
+print('\n### Example 2: Isotropic Hardening with larger strain increments')
+strain_increments_large = np.linspace(0, 0.2, 5)  # Larger increments from 0 to 0.2
+sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=20e3, Y_0=300, strain_increments=strain_increments_large, n=50)
+print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])
+
+# Example 3: Kinematic Hardening with multiple strain increments
+print('\n### Example 3: Kinematic Hardening with multiple strain increments')
+sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=15e3, Y_0=275, strain_increments=strain_increments, n=50)
+print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])
+
+# Example 4: Kinematic Hardening with larger strain increments
+print('\n### Example 4: Kinematic Hardening with larger strain increments')
+sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=210e3, H=12e3, Y_0=280, strain_increments=strain_increments_large, n=50)
+print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])
+
+# Example 5: Comparison of Isotropic and Kinematic Hardening under same conditions
+print('\n### Example 5: Comparing Isotropic and Kinematic Hardening with multiple strain increments')
+sig_iso, ep_iso, _ = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)
+sig_kin, ep_kin, _ = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)
+print('Isotropic - Final Stress:', sig_iso[-1], 'Final Plastic Strain:', ep_iso[-1])
+print('Kinematic - Final Stress:', sig_kin[-1], 'Final Plastic Strain:', ep_kin[-1])
+
+print('\nTutorial Completed!')
