--- a/tutorials/elastoplastic_tutorial.ipynb
+++ b/tutorials/elastoplastic_tutorial.ipynb
@@ -25,70 +25,124 @@
     "sys.path.append(os.path.abspath(os.path.join('..')))\n",
     "\n",
     "import numpy as np\n",
-    "from src.elastoplastic import elastoplastic_functions as ef\n",
+    "from src.elastoplastic import elastoplastic_functions as ef\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 1: Isotropic Hardening with multiple strain increments\n",
     "\n",
-    "def run_isotropic_example(sig_0, ep_0, E, H, Y_0, strain_increments, n):\n",
-    "    \"\"\"Runs an example using the isotropic hardening model with multiple strain increments.\"\"\"\n",
-    "    model = ef.IsotropicHardeningModel(sig_0, ep_0, E, H, Y_0, n)\n",
-    "    sig_list = []\n",
-    "    ep_list = []\n",
-    "    Y_list = []\n",
-    "    \n",
-    "    for de in strain_increments:\n",
-    "        sig, ep, Y = model.compute_stress(de)\n",
-    "        sig_list.append(sig)\n",
-    "        ep_list.append(ep)\n",
-    "        Y_list.append(Y)\n",
-    "        \n",
-    "    return np.array(sig_list), np.array(ep_list), np.array(Y_list)\n",
-    "\n",
-    "def run_kinematic_example(sig_0, ep_0, E, H, Y_0, strain_increments, n):\n",
-    "    \"\"\"Runs an example using the kinematic hardening model with multiple strain increments.\"\"\"\n",
-    "    model = ef.KinematicHardeningModel(sig_0, ep_0, E, H, Y_0, n)\n",
-    "    sig_list = []\n",
-    "    ep_list = []\n",
-    "    alpha_list = []\n",
-    "    \n",
-    "    for de in strain_increments:\n",
-    "        sig, ep, alpha = model.compute_stress(de)\n",
-    "        sig_list.append(sig)\n",
-    "        ep_list.append(ep)\n",
-    "        alpha_list.append(alpha)\n",
-    "        \n",
-    "    return np.array(sig_list), np.array(ep_list), np.array(alpha_list)\n",
-    "\n",
-    "# Define strain increments\n",
-    "strain_increments = np.linspace(0, 0.1, 10)  # Example: 10 increments from 0 to 0.1\n",
-    "\n",
+    "This example demonstrates isotropic hardening with multiple strain increments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Example 1: Isotropic Hardening with multiple strain increments\n",
     "print('Example 1: Isotropic Hardening with multiple strain increments')\n",
+    "strain_increments = np.linspace(0, 0.1, 10)  # Example: 10 increments from 0 to 0.1\n",
     "sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=250, strain_increments=strain_increments, n=50)\n",
-    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
+    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 2: Isotropic Hardening with larger strain increments\n",
     "\n",
+    "This example demonstrates isotropic hardening with larger strain increments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Example 2: Isotropic Hardening with larger strain increments\n",
     "print('\\nExample 2: Isotropic Hardening with larger strain increments')\n",
     "strain_increments_large = np.linspace(0, 0.2, 5)  # Larger increments from 0 to 0.2\n",
     "sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=20e3, Y_0=300, strain_increments=strain_increments_large, n=50)\n",
-    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
+    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 3: Kinematic Hardening with multiple strain increments\n",
     "\n",
+    "This example demonstrates kinematic hardening with multiple strain increments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Example 3: Kinematic Hardening with multiple strain increments\n",
     "print('\\nExample 3: Kinematic Hardening with multiple strain increments')\n",
     "sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=15e3, Y_0=275, strain_increments=strain_increments, n=50)\n",
-    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
+    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 4: Kinematic Hardening with larger strain increments\n",
     "\n",
+    "This example demonstrates kinematic hardening with larger strain increments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Example 4: Kinematic Hardening with larger strain increments\n",
     "print('\\nExample 4: Kinematic Hardening with larger strain increments')\n",
     "sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=210e3, H=12e3, Y_0=280, strain_increments=strain_increments_large, n=50)\n",
-    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n",
+    "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 5: Comparison of Isotropic and Kinematic Hardening under same conditions\n",
     "\n",
+    "This example compares isotropic and kinematic hardening under the same conditions with multiple strain increments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Example 5: Comparison of Isotropic and Kinematic Hardening under same conditions\n",
     "print('\\nExample 5: Comparing Isotropic and Kinematic Hardening with multiple strain increments')\n",
     "sig_iso, ep_iso, _ = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
     "sig_kin, ep_kin, _ = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
     "print('Isotropic - Final Stress:', sig_iso[-1], 'Final Plastic Strain:', ep_iso[-1])\n",
-    "print('Kinematic - Final Stress:', sig_kin[-1], 'Final Plastic Strain:', ep_kin[-1])\n",
-    "\n",
-    "print('\\nTutorial Completed!')"
+    "print('Kinematic - Final Stress:', sig_kin[-1], 'Final Plastic Strain:', ep_kin[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tutorial Completed!\n",
+    "This concludes the tutorial for isotropic and kinematic hardening models."
    ]
   }
  ],
