--- a/tutorials/elastoplastic_tutorial.ipynb
+++ b/tutorials/elastoplastic_tutorial.ipynb
@@ -46,7 +46,7 @@
     "# Example 1: Isotropic Hardening with multiple strain increments\n",
     "print('Example 1: Isotropic Hardening with multiple strain increments')\n",
     "strain_increments = np.linspace(0, 0.1, 10)  # Example: 10 increments from 0 to 0.1\n",
-    "sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=250, strain_increments=strain_increments, n=50)\n",
+    "sig, ep, Y = ef.run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=250, strain_increments=strain_increments, n=50)\n",
     "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n"
    ]
   },
@@ -68,7 +68,7 @@
     "# Example 2: Isotropic Hardening with larger strain increments\n",
     "print('\\nExample 2: Isotropic Hardening with larger strain increments')\n",
     "strain_increments_large = np.linspace(0, 0.2, 5)  # Larger increments from 0 to 0.2\n",
-    "sig, ep, Y = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=20e3, Y_0=300, strain_increments=strain_increments_large, n=50)\n",
+    "sig, ep, Y = ef.run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=20e3, Y_0=300, strain_increments=strain_increments_large, n=50)\n",
     "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n"
    ]
   },
@@ -89,7 +89,7 @@
    "source": [
     "# Example 3: Kinematic Hardening with multiple strain increments\n",
     "print('\\nExample 3: Kinematic Hardening with multiple strain increments')\n",
-    "sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=15e3, Y_0=275, strain_increments=strain_increments, n=50)\n",
+    "sig, ep, alpha = ef.run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=15e3, Y_0=275, strain_increments=strain_increments, n=50)\n",
     "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n"
    ]
   },
@@ -110,7 +110,7 @@
    "source": [
     "# Example 4: Kinematic Hardening with larger strain increments\n",
     "print('\\nExample 4: Kinematic Hardening with larger strain increments')\n",
-    "sig, ep, alpha = run_kinematic_example(sig_0=0, ep_0=0, E=210e3, H=12e3, Y_0=280, strain_increments=strain_increments_large, n=50)\n",
+    "sig, ep, alpha = ef.run_kinematic_example(sig_0=0, ep_0=0, E=210e3, H=12e3, Y_0=280, strain_increments=strain_increments_large, n=50)\n",
     "print('Final Stress:', sig[-1], 'Final Plastic Strain:', ep[-1])\n"
    ]
   },
@@ -131,8 +131,8 @@
    "source": [
     "# Example 5: Comparison of Isotropic and Kinematic Hardening under same conditions\n",
     "print('\\nExample 5: Comparing Isotropic and Kinematic Hardening with multiple strain increments')\n",
-    "sig_iso, ep_iso, _ = run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
-    "sig_kin, ep_kin, _ = run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
+    "sig_iso, ep_iso, _ = ef.run_isotropic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
+    "sig_kin, ep_kin, _ = ef.run_kinematic_example(sig_0=0, ep_0=0, E=200e3, H=10e3, Y_0=260, strain_increments=strain_increments, n=50)\n",
     "print('Isotropic - Final Stress:', sig_iso[-1], 'Final Plastic Strain:', ep_iso[-1])\n",
     "print('Kinematic - Final Stress:', sig_kin[-1], 'Final Plastic Strain:', ep_kin[-1])\n"
    ]
