--- a/src/newton/newton_tutorial.ipynb
+++ b/src/newton/newton_tutorial.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "# Import necessary libraries\n",
-    "from newton import newton_functions as nf\n",
+    "import newton_functions as nf\n",
     "import numpy as np\n"
    ]
   },
