--- a/src/bisection/bisection_tutorial.ipynb
+++ b/src/bisection/bisection_tutorial.ipynb
@@ -7,9 +7,9 @@
     "# Bisection Method Examples\n",
     "\n",
     "This notebook demonstrates the use of the bisection method to find roots of several functions. The following examples are included:\n",
-    "- Example 1: Root of \( x - 4 \)\n",
-    "- Example 2: Root of \( x^3 + 8 \)\n",
-    "- Example 3: Root of \( 10 \cdot \log_{10}(x) \)\n",
+    "- Example 1: Root of $x - 4$\n",
+    "- Example 2: Root of $x^3 + 8$\n",
+    "- Example 3: Root of $10 \\cdot \\log_{10}(x)$\n",
     "- Example 4: Root of nonlinear equation involving strain\n",
     "- Example 5: Root of a power-law equation\n"
    ]
