--- a/src/bisection/bisection_tutorial.ipynb
+++ b/src/bisection/bisection_tutorial.ipynb
@@ -205,4 +205,17 @@
     "P = 50000\n",
     "C = 200000\n",
     "n = 1.4\n",
-    "a, b
+    "a, b = bf.sort_values(0, 5)\n",
+    "iteration = 0\n",
+    "\n",
+    "while True:\n",
+    "    iteration += 1\n",
+    "    if iteration > 200:\n",
+    "        print('Breaking the loop after 200 iterations')\n",
+    "        break\n",
+    "    \n",
+    "    c = bf.calculate_mean(a, b)\n",
+    "    fa, fb, fc = f1(a), f1(b), f1(c)\n",
+    "    print(f'a = {a}, b = {b}, c = {c}, f(a) = {fa}, f(b) = {fb}, f(c) = {fc}')\n",
+    "    \n",
+    "    if abs(fc) < threshold:\n",
