--- a/src/bisection/bisection_tutorial.ipynb
+++ b/src/bisection/bisection_tutorial.ipynb
@@ -219,3 +219,16 @@
     "    print(f'a = {a}, b = {b}, c = {c}, f(a) = {fa}, f(b) = {fb}, f(c) = {fc}')\n",
     "    \n",
     "    if abs(fc) < threshold:\n",
+    "    if abs(fc) < threshold:\n",
+    "        print(f'Root found at c = {c} with f(c) = {fc}')\n",
+    "        break\n",
+    "    \n",
+    "    flag = bf.check_sign(fc, fa)\n",
+    "    a, b = bf.reassign_ab(flag, a, b, c)\n",
+    "\n",
+    "print('End of Example 5')"
+   ]
+  }
+ ]
+}
+
